crates/ruff/src/rules/flake8_annotations/snapshots/ruff__rules__flake8_annotations__tests__allow_star_arg_any.snap
---
source: crates/ruff/src/rules/flake8_annotations/mod.rs
expression: diagnostics
---
- kind:
    name: AnyType
    body: "Dynamically typed expressions (typing.Any) are disallowed in `a`"
    commit: ~
    fixable: false
  location:
    row: 10
    column: 11
  end_location:
    row: 10
    column: 14
  fix: ~
  parent: ~
- kind:
    name: AnyType
    body: "Dynamically typed expressions (typing.Any) are disallowed in `foo`"
    commit: ~
    fixable: false
  location:
    row: 15
    column: 46
  end_location:
    row: 15
    column: 49
  fix: ~
  parent: ~
- kind:
    name: AnyType
    body: "Dynamically typed expressions (typing.Any) are disallowed in `a`"
    commit: ~
    fixable: false
  location:
    row: 40
    column: 28
  end_location:
    row: 40
    column: 31
  fix: ~
  parent: ~
- kind:
    name: AnyType
    body: "Dynamically typed expressions (typing.Any) are disallowed in `foo_method`"
    commit: ~
    fixable: false
  location:
    row: 44
    column: 66
  end_location:
    row: 44
    column: 69
  fix: ~
  parent: ~

