crates/ruff/src/rules/flake8_annotations/snapshots/ruff__rules__flake8_annotations__tests__ignore_fully_untyped.snap
---
source: crates/ruff/src/rules/flake8_annotations/mod.rs
---
./resources/test/fixtures/flake8_annotations/ignore_fully_untyped.py:24:5: ANN201 Missing return type annotation for public function `error_partially_typed_1`
   |
24 | def error_partially_typed_1(a: int, b):
   |     ^^^^^^^^^^^^^^^^^^^^^^^ ANN201
25 |     pass
   |

./resources/test/fixtures/flake8_annotations/ignore_fully_untyped.py:24:37: ANN001 Missing type annotation for function argument `b`
   |
24 | def error_partially_typed_1(a: int, b):
   |                                     ^ ANN001
25 |     pass
   |

./resources/test/fixtures/flake8_annotations/ignore_fully_untyped.py:28:37: ANN001 Missing type annotation for function argument `b`
   |
28 | def error_partially_typed_2(a: int, b) -> int:
   |                                     ^ ANN001
29 |     pass
   |

./resources/test/fixtures/flake8_annotations/ignore_fully_untyped.py:32:5: ANN201 Missing return type annotation for public function `error_partially_typed_3`
   |
32 | def error_partially_typed_3(a: int, b: int):
   |     ^^^^^^^^^^^^^^^^^^^^^^^ ANN201
33 |     pass
   |

./resources/test/fixtures/flake8_annotations/ignore_fully_untyped.py:43:9: ANN201 Missing return type annotation for public function `error_typed_self`
   |
43 |         pass
44 | 
45 |     def error_typed_self(self: X):
   |         ^^^^^^^^^^^^^^^^ ANN201
46 |         pass
   |


