crates/ruff/src/rules/flake8_annotations/snapshots/ruff__rules__flake8_annotations__tests__mypy_init_return.snap
---
source: crates/ruff/src/rules/flake8_annotations/mod.rs
expression: diagnostics
---
- - kind:
      name: MissingReturnTypeSpecialMethod
      body: "Missing return type annotation for special method `__init__`"
      suggestion: "Add `None` return type"
      fixable: true
    location:
      row: 5
      column: 8
    end_location:
      row: 5
      column: 16
    fix:
      content: " -> None"
      location:
        row: 5
        column: 22
      end_location:
        row: 5
        column: 22
    parent: ~
  - kind:
      name: MissingReturnTypeSpecialMethod
      body: "Missing return type annotation for special method `__init__`"
      suggestion: "Add `None` return type"
      fixable: true
    location:
      row: 11
      column: 8
    end_location:
      row: 11
      column: 16
    fix:
      content: " -> None"
      location:
        row: 11
        column: 27
      end_location:
        row: 11
        column: 27
    parent: ~
  - kind:
      name: MissingReturnTypePrivateFunction
      body: "Missing return type annotation for private function `__init__`"
      suggestion: ~
      fixable: false
    location:
      row: 40
      column: 4
    end_location:
      row: 40
      column: 12
    fix: ~
    parent: ~
  - kind:
      name: MissingReturnTypeSpecialMethod
      body: "Missing return type annotation for special method `__init__`"
      suggestion: "Add `None` return type"
      fixable: true
    location:
      row: 47
      column: 8
    end_location:
      row: 47
      column: 16
    fix:
      content: " -> None"
      location:
        row: 47
        column: 28
      end_location:
        row: 47
        column: 28
    parent: ~

