crates/ruff/src/rules/flake8_annotations/snapshots/ruff__rules__flake8_annotations__tests__suppress_none_returning.snap
---
source: crates/ruff/src/rules/flake8_annotations/mod.rs
expression: diagnostics
---
- - kind:
      name: MissingReturnTypeUndocumentedPublicFunction
      body: "Missing return type annotation for public function `foo`"
      suggestion: ~
      fixable: false
    location:
      row: 45
      column: 4
    end_location:
      row: 45
      column: 7
    fix: ~
    parent: ~
  - kind:
      name: MissingReturnTypeUndocumentedPublicFunction
      body: "Missing return type annotation for public function `foo`"
      suggestion: ~
      fixable: false
    location:
      row: 50
      column: 4
    end_location:
      row: 50
      column: 7
    fix: ~
    parent: ~
  - kind:
      name: MissingTypeFunctionArgument
      body: "Missing type annotation for function argument `a`"
      suggestion: ~
      fixable: false
    location:
      row: 59
      column: 8
    end_location:
      row: 59
      column: 9
    fix: ~
    parent: ~

